# cmake-tutorial

./: .cproject  .project  CMakeLists.txt  LICENSE
00-intro/: CMakeLists.txt  foo.c  foo1.c  foo1.h  foo2.c  foo2.h  hello.c  program.h.in
00-intro/foo1/: CMakeLists.txt  foo1.c  foo1.h
00-intro/foo2/: CMakeLists.txt
01-mkl/: CMakeLists.txt  solver.cpp
01-mkl/cmake/: FindMKL.cmake
02-qt5/: CMakeLists.txt  dummyclass.cpp  dummyclass.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc
02-qt5/form/: CMakeLists.txt  form.cpp  form.h  form.ui
03-dep/: CMakeLists.txt  deps.c  gettext.patch
03-dep/cmake/: autotools.cmake
04-test/: CMakeLists.txt  hello.c
04-test/foo/: foo.c
05-ext/: CMakeLists.txt
05-ext/foo1/: CMakeLists.txt  foo1.c
05-ext/foo1/include/foo1/: foo1.h
05-ext/hello/: CMakeLists.txt  hello.c
06-fortran/: CMakeLists.txt  hello.f
