cmake_minimum_required(VERSION 3.5)

project(hello)
add_executable(hello hello.c)
target_link_libraries(hello foo1 foo2)
add_library(foo1 SHARED foo1.c)
add_library(foo2 STATIC foo2.c)
install(TARGETS hello foo1 foo2 DESTINATION hellosoft)
set(CMAKE_INSTALL_RPATH_USE_LINK_PATH TRUE)
set(CMAKE_EXE_LINKER_FLAGS "-Wl,-rpath='$ORIGIN'")

set(MY_VAR "foo" CACHE STRING "super doc foo")
set(MY_VAR "bar" CACHE STRING "super doc bar" FORCE)

#if(WIN32)
#else(WIN32)
#  set(MY_VAR "bar" STRING "super doc bar")
#endif(WIN32)

message("MY_VAR value is: " ${MY_VAR})
include(InstallRequiredSystemLibraries)

set(CPACK_PACKAGE_DESCRIPTION_SUMMARY "My funky project")
set(CPACK_PACKAGE_VENDOR "Me, myself, and I")
set(CPACK_PACKAGE_VERSION_MAJOR "1")
set(CPACK_PACKAGE_VERSION_MINOR "3")
set(CPACK_PACKAGE_VERSION_PATCH "2")
set(CPACK_PACKAGE_INSTALL_DIRECTORY "CMake ${CMake_VERSION_MAJOR}.${CMake_VERSION_MINOR}")
set(CPACK_PACKAGE_EXECUTABLES "hello")
include(CPack)
